force-app/main/default/objects/Permission_By_RecordType_Hierarchy__mdt/Permission_By_RecordType_Hierarchy__mdt.object-meta.xml
<CustomObject>
    <description>Control hierarchy of user/permission set/profile when we consider permission settings by record type. Refer to &apos;Permissions by Record Type&apos; custom setting</description>
    <label>Permission By RecordType Hierarchy</label>
    <pluralLabel>Permission By RecordType Hierarchies</pluralLabel>
</CustomObject>