force-app/main/default/objects/Permission_By_RecordType_Hierarchy__mdt/fields/Delete_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Delete_Error_Message__c</fullName>
    <description>Use the following tokens:
$ObjectName
$FieldName</description>
    <inlineHelpText>Use the following tokens:
$ObjectName
$FieldName</inlineHelpText>
    <label>Delete Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>