force-app/main/default/objects/Permission_By_RecordType_Hierarchy__mdt/fields/Type_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Type_Hierarchy__c</fullName>
    <description>Comma separated, accepts value like this:
Profile,User,PermissionSet
First value is considered first</description>
    <inlineHelpText>Comma separated, accepts value like this:
Profile,User,PermissionSet
First value is considered first</inlineHelpText>
    <label>Type Hierarchy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>